@@ -55,6 +55,8 @@ Version 1.11.7+dev:
      will need to do so again.
    * Added possibility to hide eras menu for campaigns in MP Create.
    * Introduced side's name in MP Connect.
+   * Middle click scrolling is now based on distance from initial click instead
+     of the centre of the screen.
 
 
 Version 1.11.7:
